Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8580

For some BOOLEAN or ENUM sysvars list of valid values is not generated

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 10.1(EOL)
    • 10.1.16
    • Plugins
    • None

    Description

      I don't think it's important, just a small inconsistency. Please feel free to close as 'Won't fix' if you so prefer.

      1) All InnoDB, MyISAM and Aria BOOLEAN variables have NULL in ENUM_VALUE_LIST, while most of server ones have OFF,ON there.

      2) Apart from storage engine variables, there is also this:

      +-----------------------------------+---------------+-----------------+
      | variable_name                     | variable_type | enum_value_list |
      +-----------------------------------+---------------+-----------------+
      | BINLOG_OPTIMIZE_THREAD_SCHEDULING | BOOLEAN       | NULL            |
      +-----------------------------------+---------------+-----------------+

      Since they are boolean variables, it should not really matter from user's perspective whether OFF,ON are explicitly listed or not.

      3) Some ENUM variables also have NULL in the field. All of them are character-set-related, so I suppose it might be on purpose:

      +--------------------------+---------------+-----------------+
      | variable_name            | variable_type | enum_value_list |
      +--------------------------+---------------+-----------------+
      | CHARACTER_SET_RESULTS    | ENUM          | NULL            |
      | CHARACTER_SET_CONNECTION | ENUM          | NULL            |
      | CHARACTER_SET_CLIENT     | ENUM          | NULL            |
      | COLLATION_CONNECTION     | ENUM          | NULL            |
      | CHARACTER_SET_SYSTEM     | ENUM          | NULL            |
      | CHARACTER_SET_SERVER     | ENUM          | NULL            |
      | LC_MESSAGES              | ENUM          | NULL            |
      | CHARACTER_SET_DATABASE   | ENUM          | NULL            |
      | COLLATION_DATABASE       | ENUM          | NULL            |
      | LC_TIME_NAMES            | ENUM          | NULL            |
      | COLLATION_SERVER         | ENUM          | NULL            |
      | CHARACTER_SET_FILESYSTEM | ENUM          | NULL            |
      +--------------------------+---------------+-----------------+

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 40m
                  40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.