MDEV-8580 For some BOOLEAN or ENUM sysvars list of valid values is not generated

set the 'typelib' member for plugin boolean sysvars